--- a/ssr-react/template/index.html
+++ b/ssr-react/template/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>test-ssr</title>
+    <!-- 서버에서 데이터(__DATA_FROM_SERVER__)를 받아 Client의 초기 데이터로 사용한다.-->
+    <script type="text/javascript">
+      window.__INITIAL_DATA = __DATA_FROM_SERVER__;
+    </script>
   </head>
   <body>
     <div id="root"></div>
